# triloApkGuard

./: .gitignore  CONTRIBUTING.md  DISCLAIMER.md  README.md  SECURITY.md  check_alignment.py  check_bug.py  check_bug2.py  check_pool.py  check_pool2.py  check_rm.py  compare_manifests.py  debug_axml.py  pyproject.toml  test_modify.py
docs/: DEX_加固方案.md  OPEN_SOURCE_RELEASE_CHECKLIST.md
native/: trilocfg.c
stub/: KeyProvider.smali  StubApplication.smali
tests/: test_encryptor.py  test_key_management.py  test_native_build.py  test_real_device_install_launch.py
trilo_dex/: cli.py  encryptor.py  key_management.py  manifest.py  native_build.py  parser.py  protector.py  repacker.py  signer.py  tools.py
